# pico-skm

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  skmhid.c  skmhid.h
